Inital Source commit

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /Memory Allocator.VC.VC.opendb
+/Memory Allocator.VC.db
+/x64/Debug
+/Memory Allocator/x64/Debug
